# emoji-styler

./: .gitignore  LICENSE  PKG-INFO  README.md  pyproject.toml
.github/: RELEASE.md
.github/workflows/: publish.yml  test.yml
emoji_styler/: __init__.py  cli.py  core.py  styles.py
tests/: __init__.py  test_styles.py
web/: .env.example  README.md  package-lock.json  package.json  tailwind.config.js
web/app/: globals.css  layout.tsx  page.tsx
web/components/: EmojiStylerDemo.tsx
web/public/: robots.txt
