[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "emoji-styler"
version = "0.0.1"
description = "Transform boring text into fun emoji styles"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Ruslan", email = "ruslan@example.com" }
]
keywords = ["emoji", "text", "styling", "cli", "fun"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/ruslanlap/emoji-styler"
Documentation = "https://github.com/ruslanlap/emoji-styler#readme"
Repository = "https://github.com/ruslanlap/emoji-styler"
Issues = "https://github.com/ruslanlap/emoji-styler/issues"

[project.scripts]
emoji-styler = "emoji_styler.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
]

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311"]

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
